--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,4 +1,11 @@
 @font-face {
+    font-family: Font;
+    src: url('/fonts/Font.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+@font-face {
     font-family: Expensify Neue;
     font-weight: 400;
     font-style: normal;
